  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

===========================================================================
MARK: released gwenhywfar-2.1.1 (2006/03/26)
===========================================================================


2006/03/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in DBIO plugins: Was returning a false value when file to be
  checked did not exist


2006-03-24  Christian Stimming <stimming@tuhh.de>

	* src/os/posix/fslock.c: Cast the result of getpid() to
	int. Necessary for sparc-solaris.

	* src/base/memory.c, plugins/dbio/olddb/olddb.c: Fix format args
	for amd64 platform.


2006/03/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- nl_hbci.c: Also print code and text when logging error response
- list1.h: Allow to define lists with private constructors (i.e. the
  constructor/destructor is invisible to applications)
- list2.h: Made some arguments const where possible


===========================================================================
MARK: released gwenhywfar-2.1.0 (2006/03/20)
===========================================================================


2006/03/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flags to NetLayer_Log which allow to choose what data to log 
  (incoming and/or outgoing data)


2006/03/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in IPC request manager


2006/03/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- replaced old GWEN_LIST stuff by new code: These new lists are a drop-in