@@ -19,9 +19,9 @@ AC_CONFIG_HEADERS([config.h])
 GWENHYWFAR_VERSION_MAJOR=2
 GWENHYWFAR_VERSION_MINOR=1
 GWENHYWFAR_VERSION_PATCHLEVEL=1
-GWENHYWFAR_VERSION_BUILD=0
+GWENHYWFAR_VERSION_BUILD=1
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="stable"
+GWENHYWFAR_VERSION_TAG="cvs"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
@@ -526,17 +526,26 @@ AC_MSG_RESULT($enable_release)
 # GCC version (check for usability)
 #
 AC_MSG_CHECKING(if symbol visibility is supported)
+visibility_cflags=""
 case `basename $CC` in 
   gcc*)
-     gccversion=`$CC --version | { read x1 x2 x3; echo $x3; }`
+     dnl Determine version number (watch out: the outside square
+     dnl parenteses are vitally important here!)
+     gccversion=["` ${CC} --version | head -1 | ${SED} 's/.*\([0-9]\.[0-9]\.[0-9]*\).*/\1/' `"]
      case $gccversion in
-       0.* | 1.* | 2.* | 3.*)
-         visibility_supported="no (needs gcc >=4.0, you have $gccversion)"
-         ;;
-       *)
-         visibility_supported="yes"
+       4.*)
+	 # Activate -fvisibility=hidden only for explicit 4.x gcc
+	 # versions. We never now what future gcc's might do with
+	 # that argument, and we also can't be sure that other
+	 # gcc's happen to show very weird version
+	 # numbers. Therefore leave the default at non-activated.
+         visibility_supported="yes, gcc-${gccversion}"
          AC_DEFINE(GCC_WITH_VISIBILITY_ATTRIBUTE, 1, [visibility])
          visibility_cflags="-fvisibility=hidden"
+         ;;
+       *)
+	 # Default: -fvisibility=hidden not activated.
+         visibility_supported="no (needs gcc >=4.0, you have gcc-${gccversion})"
          ;;
       esac
       ;;
