@@ -3,6 +3,16 @@
   ! as soon as the next release of GnuCash is out (2.0.0)                !
   ------------------------------------------------------------------------
 
+2006-03-27  Christian Stimming <stimming@tuhh.de>
+
+	* src/parser/xsd_write.c, src/net2/nl_http.c: Add cast to
+	isdigit() et al functions; needed for platforms where "char" has a
+	different signedness than on most platforms. Notably
+	sparc-solaris.
+
+	* configure.ac: Change gcc version number checking so that it
+	works with 2.95.x as well.
+
 ===========================================================================
 MARK: released gwenhywfar-2.1.1 (2006/03/26)
 ===========================================================================
